--- a/heartwords.html
+++ b/heartwords.html
@@ -21,6 +21,8 @@
       <li>学会了p图</li>
       <li>学会了制作简单的网页</li>
   </ul>
+  <h3>我的网页设计作品</h3>
+  <img src="网页.png">
   <h4>The teachers are very friendly and patient.I like them very much.I believe that I will get on good with them.</h4>
   <h5>Aspen王晋杨</h5>
 </body>
